--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_BACKEND_URL= http://todolist-demo.ap-northeast-2.elasticbeanstalk.com
+REACT_APP_BACKEND_PROXY=https://todolist-demo-v1.netlify.app
